# OpenJam

./: .gitignore  .gitmodules  CMakeLists.txt  Dependencies.cmake  LICENSE  Project.cmake  README.md
examples/media/ball_glitch/: atlas1.pvr  sprite.mpf
examples/media/ball_slash/: atlas1.pvr  ball_slash.mpf
examples/media/bat_glitch/: atlas1.pvr  sprite.mpf
examples/media/bat_green_head/: atlas1.pvr  sprite.mpf
examples/media/bricks_glitch/: atlas1.pvr  sprite.mpf  sprite2.mpf  sprite3.mpf
examples/media/bricks_green_head/: atlas1.pvr  sprite.mpf
examples/media/cube/: pattern_raspberry.pvr
examples/media/enemy_fireball/: atlas1.pvr  sprite.mpf
examples/media/levels/: Level1.xml  Level2.xml
examples/media/pattern_glitch/: sprite.mpf
examples/media/pattern_mesh/: atlas1.pvr  sprite.mpf
examples/media/pattern_raspberry/: sprite.mpf
examples/media/plane/: atlas1.pvr
examples/media/tail_fire/: atlas1.pvr  sprite.mpf
examples/media/tv/: tv_d.pvr
examples/platform/ios/: Info.plist
examples/src/: CGameScene.cpp  CGameScene.h
libs/AMD_GLES_SDK/: README.txt
libs/AMD_GLES_SDK/sample/: GLESSample_vs2010.opensdf  GLESSample_vs2010.vcxproj  main.cpp
libs/TinyXML/: CMakeLists.txt  Project.cmake  Sources.cmake
libs/TinyXML/src/: tinyxml.cpp  tinyxml.h
libs/patches/: zlib_ios.patch
libs/patches/glm/: setup.hpp
libs/patches/vfspp/: CMakeLists.txt
projects/TestApp/TestApp.xcodeproj/: project.pbxproj
projects/dreamcast/: generate.command
projects/ios/: generate.command
projects/osx/: generate.command
src/animations/: CAnimator2D.cpp  CAnimator2D.h
src/batching/: CBatch.cpp  CBatch.h  CBatchManager.cpp  CBatchManager.h
src/camera/: CCamera2D.cpp  CCamera2D.h
src/ces/: CCESEvent.cpp  CCESEvent.h  IComponent.cpp  IComponent.h  IEntity.cpp  IEntity.h  ISystem.cpp  ISystem.h
src/ces/component_affectors/: CTransformAffector.cpp  CTransformAffector.h
src/ces/components/: CAnimation2DComponent.cpp  CAnimation2DComponent.h  CBatchComponent.cpp  CBatchComponent.h  CEventComponent.cpp  CEventComponent.h  CRenderComponent.cpp  CRenderComponent.h  CTouchComponent.cpp  CTouchComponent.h  CTransformationComponent.cpp  CTransformationComponent.h  CUpdateComponent.cpp  CUpdateComponent.h
src/ces/entities/: CCamera2D.cpp  CCamera2D.h  CCamera3D.cpp  CCamera3D.h  CObject3D.cpp  CObject3D.h  CSprite2D.cpp  CSprite2D.h  CSprite2DEntity.cpp  CSprite2DEntity.h
src/ces/systems/: CAnimation2DSystem.cpp  CAnimation2DSystem.h  CBatchingSystem.cpp  CBatchingSystem.h  CEventSystem.cpp  CEventSystem.h  CRenderSystem.cpp  CRenderSystem.h  CTouchSystem.cpp  CTouchSystem.h  CTransformationSystem.cpp  CTransformationSystem.h  CUpdateSystem.cpp  CUpdateSystem.h
src/core/: CFileInfo.cpp  CFileInfo.h  CGame.cpp  CGame.h  Global.h  IAnimator.h  ICamera.h  IEvent.h  IEventDispatcher.hpp  IEventable.cpp  IEventable.h  IFile.h  IFileInfo.h  IFileSystem.h  IFrameBuffer.h  IGameObject.cpp  IGameObject.h  IIMage.h  IIndexBuffer.h  ILoader.cpp  ILoader.h  IMaterial.h  IMesh.h  IModel3D.h  IObject.h  IRenderInstance.h  IRenderTarget.h  IRenderView.h  IRenderer.h  IResource.cpp  IResource.h  IScene.cpp  IScene.h  IShader.h  IShaderProgram.h  IShaderSource.h  ISprite.h  IStencil.cpp  IStencil.h  ITexture.h  (+6 more)
src/events/input/: CTouchEvent.cpp  CTouchEvent.h
src/filesystems/: CMemoryFile.cpp  CMemoryFile.h  CMemoryFileInfo.cpp  CMemoryFileInfo.h  CMemoryFileSystem.cpp  CMemoryFileSystem.h  CNativeFile.cpp  CNativeFile.h  CNativeFileInfo.cpp  CNativeFileInfo.h  CNativeFileSystem.cpp  CNativeFileSystem.h  CVirtualFileSystem.cpp  CVirtualFileSystem.h  CZipFile.cpp  CZipFile.h  CZipFileSystem.cpp  CZipFileSystem.h
src/functional/: CSignal.hpp  CSlot.hpp
src/gameobjects/: CBatchObject.cpp  CBatchObject.h  CGameObject2D.hpp  CGameObjectDesc.h
src/loaders/: CLoaderFile.cpp  CLoaderFile.h  CResourceCache.cpp  CResourceCache.hpp
src/math/: CColor.cpp  CColor.h  CColor.hpp  CMath.h  CMathFunc.cpp  CMathFunc.hpp  CMatrix.hpp  CMatrix4x4.cpp  CMatrix4x4.h  CRect2D.cpp  CRect2D.h  CTransform.cpp  CTransform.h  CTransform.hpp  CVector.hpp  CVector2D.cpp  CVector2D.h  CVector3D.cpp  CVector3D.h  CVertex.cpp  CVertex.h
src/render/: CRenderViewAndroid.cpp  CRenderViewAndroid.h  CRenderViewDreamcast.cpp  CRenderViewDreamcast.h  CRenderViewIOS.h  CRenderViewIOS.mm  CRenderViewIOS_.h  CRenderViewIOS_.mm  CRenderViewIos.h  CRenderViewIos.mm  CRenderViewOSX.h  CRenderViewOSX.mm  CRenderViewWindows.cpp  CRenderViewWindows.h  CRenderViewX11.cpp  CRenderViewX11.h  CTextureRenderTarget.cpp  CTextureRenderTarget.h
src/render/OGL1_3/: CFrameBufferOGL1_3.cpp  CFrameBufferOGL1_3.h  CFrameBufferTargetOGL1_3.cpp  CFrameBufferTargetOGL1_3.h  CIndexBufferOGL1_3.cpp  CIndexBufferOGL1_3.h  CMaterialOGL1_3.cpp  CMaterialOGL1_3.h  CMeshOGL1_3.cpp  CMeshOGL1_3.h  CRenderTargetColorOGL1_3.cpp  CRenderTargetColorOGL1_3.h  CRenderTargetDepthOGL1_3.cpp  CRenderTargetDepthOGL1_3.h  CRenderTargetStencilOGL1_3.cpp  CRenderTargetStencilOGL1_3.h  CRenderTargetTextureOGL1_3.cpp  CRenderTargetTextureOGL1_3.h  CRendererOGL1_3.cpp  CRendererOGL1_3.h  CShaderOGL1_3.cpp  CShaderOGL1_3.h  CShaderProgramOGL1_3.cpp  CShaderProgramOGL1_3.h  CTextureOGL1_3.cpp  CTextureOGL1_3.h  CVertexBufferOGL1_3.cpp  CVertexBufferOGL1_3.h
src/resources/: CResourceCache.hpp  CTextureCache.cpp  CTextureCache.h
src/shaders/: CShaderSourceBatch.h  CShaderSourceBatchFragment.cpp  CShaderSourceBatchVertex.cpp  CShaderSourceCommon.h  CShaderSourceCommonFragment.cpp  CShaderSourceCommonVertex.cpp  CShaderSourceInsert.h  CShaderSourceInsertFragment.cpp  CShaderSourceInsertVertex.cpp  CShaderSourceSprite.h  CShaderSourceSpriteFragment.cpp  CShaderSourceSpriteVertex.cpp
src/thread/: CBlockOperation.cpp  CBlockOperation.h  COperationQueue.cpp  COperationQueue.h  CSemaphore.cpp  CSemaphore.h  CTask.cpp  CTask.h  CThreadExecutor.cpp  CThreadExecutor.h  CThreadPool.cpp  CThreadPool.h  IOperation.h
src/utils/: CNonCopyable.cpp  CNonCopyable.h  CStringUtils.cpp  CStringUtils.h  CSystem.cpp  CSystem.h  CSystem.mm  CTypeId.hpp
(+304 files in other folders)
